1.0.0-a1 - 2006-10-25
=====================

    - Fixed some deprecation warnings for guess_content_type.
      [hannosch]

    - Updated a test for generated XML export format.
      [hannosch]

    - Initial version, see README.txt for details.
      [lots of people]
