@@ -1,85 +1,85 @@
 <?xml version="1.0" ?>
 <metadata xmlns="http://plone.org/ns/archetypes/" xmlns:cmf="http://cmf.zope.org/namespaces/default/" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:xmp="adobe:ns:meta">
-    <dc:title>
-        Some Title
-    </dc:title>
-    <dc:description>
-        Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
+	<dc:title>
+		Some Title
+	</dc:title>
+	<dc:description>
+		Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
 consectetur, adipisci velit...
 
 There is no one who loves pain itself, who seeks after it and wants to
 have it, simply because it is pain...
-    </dc:description>
-    <dc:subject>
-        Data
-    </dc:subject>
-    <dc:subject>
-        Test
-    </dc:subject>
-    <dc:contributor>
-        sidnei
-    </dc:contributor>
-    <dc:contributor>
-        alan
-    </dc:contributor>
-    <dc:creator>
-        sidnei
-    </dc:creator>
-    <dc:creator>
-        alan
-    </dc:creator>
-    <dc:rights>
-        Copyleft 2004, No Rights Reserved
-    </dc:rights>
-    <dc:language>
-        en
-    </dc:language>
-    <xmp:CreateDate>
-        2004-01-01T00:02:03Z
-    </xmp:CreateDate>
-    <xmp:ModifyDate>
-        2004-09-09T09:09:08Z
-    </xmp:ModifyDate>
-    <field name="effectiveDate">
-        2004/01/01 00:02:03 GMT+0
-    </field>
-    <field name="text">
-        Let &lt;b&gt;there&lt;/b&gt; be &lt;i&gt;light&lt;/i&gt;
-    </field>
-    <field name="expirationDate">
-        2004/09/09 09:09:08 GMT+0
-    </field>
-    <field name="allowDiscussion">
-        0
-    </field>
-    <field name="id">
-        document
-    </field>
-    <uid>
-        9x9x9x9x9x9x9x9x9x9x9x9x9x9x9x9x9x9x9
-    </uid>
-    <cmf:type>
-        Document
-    </cmf:type>
-    <cmf:workflow_history>
-        <cmf:workflow id="plone_workflow">
-            <cmf:history>
-                <cmf:var id="action" type="None" value="None"/>
-                <cmf:var id="actor" type="str" value="portal_owner"/>
-                <cmf:var id="comments" type="str" value=""/>
-                <cmf:var id="review_state" type="str" value="visible"/>
-                <cmf:var id="time" type="date" value="2006-06-12 06:17:57"/>
-            </cmf:history>
-            <cmf:history>
-                <cmf:var id="action" type="None" value="None"/>
-                <cmf:var id="actor" type="str" value="portal_owner"/>
-                <cmf:var id="comments" type="str" value=""/>
-                <cmf:var id="review_state" type="str" value="published"/>
-                <cmf:var id="time" type="date" value="2006-06-09 14:14:03"/>
-            </cmf:history>
-        </cmf:workflow>
-    </cmf:workflow_history>
-    <cmf:security>
-        <cmf:local_role role="Owner" user_id="portal_owner"/>
-    </cmf:security>
+	</dc:description>
+	<dc:subject>
+		Data
+	</dc:subject>
+	<dc:subject>
+		Test
+	</dc:subject>
+	<dc:contributor>
+		sidnei
+	</dc:contributor>
+	<dc:contributor>
+		alan
+	</dc:contributor>
+	<dc:creator>
+		sidnei
+	</dc:creator>
+	<dc:creator>
+		alan
+	</dc:creator>
+	<dc:rights>
+		Copyleft 2004, No Rights Reserved
+	</dc:rights>
+	<dc:language>
+		en
+	</dc:language>
+	<xmp:CreateDate>
+		2004-01-01T00:02:03Z
+	</xmp:CreateDate>
+	<xmp:ModifyDate>
+		2004-09-09T09:09:08Z
+	</xmp:ModifyDate>
+	<field name="id">
+		document
+	</field>
+	<field name="text">
+		Let &lt;b&gt;there&lt;/b&gt; be &lt;i&gt;light&lt;/i&gt;
+	</field>
+	<field name="effectiveDate">
+		2004/01/01 00:02:03 GMT+0
+	</field>
+	<field name="expirationDate">
+		2004/09/09 09:09:08 GMT+0
+	</field>
+	<field name="allowDiscussion">
+		0
+	</field>
+	<uid>
+		9x9x9x9x9x9x9x9x9x9x9x9x9x9x9x9x9x9x9
+	</uid>
+	<cmf:type>
+		Document
+	</cmf:type>
+	<cmf:workflow_history>
+		<cmf:workflow id="plone_workflow">
+			<cmf:history>
+				<cmf:var id="action" type="None" value="None"/>
+				<cmf:var id="actor" type="str" value="portal_owner"/>
+				<cmf:var id="comments" type="str" value=""/>
+				<cmf:var id="review_state" type="str" value="visible"/>
+				<cmf:var id="time" type="date" value="2006-06-12 06:17:57"/>
+			</cmf:history>
+			<cmf:history>
+				<cmf:var id="action" type="None" value="None"/>
+				<cmf:var id="actor" type="str" value="portal_owner"/>
+				<cmf:var id="comments" type="str" value=""/>
+				<cmf:var id="review_state" type="str" value="published"/>
+				<cmf:var id="time" type="date" value="2006-06-09 14:14:03"/>
+			</cmf:history>
+		</cmf:workflow>
+	</cmf:workflow_history>
+	<cmf:security>
+		<cmf:local_role role="Owner" user_id="portal_owner"/>
+	</cmf:security>
 </metadata>
