@@ -1,25 +1,28 @@
 id: document
 title: Some Title
-excludeFromNav: False
-subject: Test
-  Data
 description: Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
    consectetur, adipisci velit...
    There is no one who loves pain
    itself, who seeks after it and wants to have it, simply because it
    is pain...
-contributors: sidnei
-  alan
-creators: sidnei
-  cameron
+subject: Test
+  Data
+relatedItems: 
+location: 
+language: en
 effectiveDate: 2004/01/01 01:02:03 GMT-1
 expirationDate: 2004/09/09 10:09:08 GMT-1
-language: en
-rights: Copyleft 2004, No Rights Reserved
 creation_date: 2004/01/01 01:02:03 GMT-1
 modification_date: 2004/09/09 10:09:08 GMT-1
-relatedItems: 
+creators: sidnei
+  cameron
+contributors: sidnei
+  alan
+rights: Copyleft 2004, No Rights Reserved
 allowDiscussion: 0
+excludeFromNav: False
+presentation: False
+tableContents: False
 Content-Type: text/plain
 
 
