@@ -1,6 +1,10 @@
 1.0.0-a1 - 2006-10-25
 =====================
 
+    - In the ATNS marshaller, preserve the field order by not using
+      set.
+      [nouri]
+
     - Fixed some deprecation warnings for guess_content_type.
       [hannosch]
 
